# cppkg

./: .gitignore  CMakeLists.txt  readme.md
include/: add.hpp  build.hpp  command.hpp  dependency.hpp  init.hpp  run.hpp
src/: cppkg.cc
